tests/parsing/cmc/errors/131.expected
File "tests/parsing/cmc/errors/131.cmc", line 1, character 32-33:
1 | (define-system sys :subsys (a b c))
                                    ^
Error while parsing a subsystem declaration with zero arguments,
      read the symbol 'c',
      but expected a closing parenthesis. To define a subsystem with
      arguments  parenthesis must be added around the subsystem name and
      args.  `(local_name (subsystem_name var_a var_b ...))`.
